--- a/src/main.scss
+++ b/src/main.scss
@@ -6,15 +6,15 @@
  */
 
 //  ### Primary
-$desaturated-red:hsl(0, 36%, 70%);
+$desaturated-red: hsl(0, 36%, 70%);
 $soft-red: hsl(0, 93%, 68%);
 
-//  ### Neutral 
+//  ### Neutral
 $dark-grayish-red: hsl(0, 6%, 24%);
 
-//  ### Gradients 
-$linear-1:linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
-$linear-2:linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+//  ### Gradients
+$linear-1: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+$linear-2: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 
 .debug * {
   outline: 1px solid red;
@@ -24,11 +24,8 @@ $linear-2:linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 //   color: $desaturated-red;
 // }
 
-
-
 body {
-  font-family: "Josefin Sans",
-    sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -36,7 +33,7 @@ body {
   font-size: 16px;
   color: $desaturated-red;
   background: $linear-1;
-  background-image: url(/images/bg-pattern-desktop.svg);
+  background-image: url(./images/bg-pattern-desktop.svg);
 
   // padding: 50px 73px;
 }
@@ -47,7 +44,8 @@ body {
   grid-template-rows: 100px 1fr;
   width: 100%;
   min-height: 100vh;
-  grid-template-areas: "logo photo"
+  grid-template-areas:
+    "logo photo"
     "content photo";
 
   .logo {
@@ -64,8 +62,6 @@ body {
     max-width: 450px;
     margin: 0 auto;
     // padding: 0 0 0 167px;
-
-
 
     h1 {
       margin-top: 80px;
@@ -105,12 +101,7 @@ body {
 
       // }
 
-
-
-
       label {
-
-
         .email-input {
           height: 56px;
           width: 100%;
@@ -144,9 +135,6 @@ body {
           &:valid+.icon-error {
             display: none;
           }
-
-
-
         }
 
         .icon-error {
@@ -186,23 +174,17 @@ body {
           margin: 0 auto;
         }
       }
-
-
-
     }
   }
 
   .photo {
     grid-area: photo;
 
-    background-image: url(/images/hero-desktop.jpg);
+    background-image: url(./images/hero-desktop.jpg);
     background-size: cover;
     background-position: top center;
-
   }
 }
-
-
 
 @media (min-width: 1440px) {
   h1 {
@@ -223,7 +205,8 @@ body {
   .container {
     grid-template-columns: 1fr;
     grid-template-rows: auto 250px 1fr;
-    grid-template-areas: "logo"
+    grid-template-areas:
+      "logo"
       "photo"
       "content";
 
@@ -232,7 +215,7 @@ body {
     }
 
     .photo {
-      background: url(/images/hero-mobile.jpg);
+      background: url(./images/hero-mobile.jpg);
     }
 
     .content {
@@ -258,7 +241,6 @@ body {
         margin-bottom: 20px;
 
         label {
-
           .email-input {
             height: 50px;
             padding: 14px 100px 14px 23px;
@@ -274,7 +256,6 @@ body {
             text-align: center;
             display: block;
           }
-
         }
 
         .submit-btn {
@@ -283,10 +264,8 @@ body {
           background: linear-gradient(135deg, #f8bfbf, #ee8c8c);
           width: 65px;
           height: 50px;
-
         }
       }
     }
-
   }
 }
