--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,8 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
-@import url("https://unpkg.com/tailwindcss@1.5.2/dist/base.css");
+@import url("https://unpkg.com/tailwindcss@latest/dist/base.css");
 
 /*
- ## Colors 
+ ## Colors
  */
 
 //  ### Primary
@@ -27,22 +26,23 @@ $linear-2: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 body {
   font-family: "Josefin Sans", sans-serif;
   min-height: 100vh;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 16px;
   color: $desaturated-red;
   background: $linear-1;
-  background-image: url(./images/bg-pattern-desktop.svg);
+  background-image: url("../images/bg-pattern-desktop.svg");
 
   // padding: 50px 73px;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 58% 42%;
-  grid-template-rows: 100px 1fr;
-  width: 100%;
+  grid-template-columns: 1fr 40%;
+  grid-template-rows: 186px 1fr;
+  width: clamp(375px, 100%, 1440px);
   min-height: 100vh;
   grid-template-areas:
     "logo photo"
@@ -50,21 +50,31 @@ body {
 
   .logo {
     grid-area: logo;
-    width: 80%;
-    max-width: 450px;
-    margin: 65px auto 0 auto;
+    width: 100%;
+    max-width: 640px;
+    // width: clamp(640px, 443px, 60%);
+    margin: 0 auto;
     // margin: 65px 0 0 167px;
+    display: flex;
+    padding: 0 1.5em;
+    div {
+      margin-top: 4em;
+      // width: 158px;
+      // height: 33px;
+    }
   }
 
   .content {
     grid-area: content;
-    width: 80%;
-    max-width: 450px;
+    width: 100%;
+    max-width: 640px;
+    // width: clamp(640px, 443px, 60%);
+    // max-width: calc(450px + 1em);
     margin: 0 auto;
-    // padding: 0 0 0 167px;
+    padding: 0 1.5em;
 
     h1 {
-      margin-top: 80px;
+      // margin-top: 80px;
       text-transform: uppercase;
       font-size: 4rem;
       line-height: 4.3rem;
@@ -79,13 +89,12 @@ body {
     }
 
     p {
-      margin-top: 40px;
-      margin-bottom: 40px;
+      margin-top: 30px;
     }
 
     .form {
       position: relative;
-
+      margin-top: 40px;
       // &.error {
       //   .email-box {
       //     border: 2px solid $soft-red;
@@ -124,15 +133,15 @@ body {
             border: 1px solid $desaturated-red;
           }
 
-          &:invalid+.icon-error {
+          &:invalid + .icon-error {
             display: inline;
           }
 
-          &:focus:invalid+.icon-error {
+          &:focus:invalid + .icon-error {
             display: none;
           }
 
-          &:valid+.icon-error {
+          &:valid + .icon-error {
             display: none;
           }
         }
@@ -179,10 +188,15 @@ body {
 
   .photo {
     grid-area: photo;
-
-    background-image: url(./images/hero-desktop.jpg);
+    // img {
+    //   object-fit: cover;
+    //   height: 100%;
+    //   min-height: 100vh;
+    // }
+    background-image: url("../images/hero-desktop.jpg");
     background-size: cover;
     background-position: top center;
+    background-repeat: no-repeat;
   }
 }
 
@@ -196,7 +210,7 @@ body {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 768px) {
   body {
     background: $linear-1;
     background-image: none;
@@ -209,18 +223,26 @@ body {
       "logo"
       "photo"
       "content";
+    width: 100%;
+    height: 100%;
 
     .logo {
-      margin: 30px auto 30px 30px;
+      padding: 30px;
+      width: 100%;
+      img {
+        margin: 0;
+      }
     }
 
     .photo {
-      background: url(./images/hero-mobile.jpg);
+      background-image: url("../images/hero-mobile.jpg");
+      width: 100%;
     }
 
     .content {
-      padding: 0;
-      margin: 0 30px;
+      padding: 0 30px;
+      width: 100%;
+      height: 100%;
 
       h1 {
         margin-top: 66px;
